# tru-website

./: .dockerignore  .env.production  .gitignore  ANALYSIS_REPORT.md  AUTH_GUIDE.md  BACKEND_ERROR_HANDLER_GUIDE.md  COMPLETION_REPORT.md  CONTACTS_IMPLEMENTATION_COMPLETE.md  CONTACTS_INDEX.md  CONTACTS_MANAGEMENT_GUIDE.md  CONTACTS_SUMMARY.md  CRUD_ACCÈS_MEMBRES_COMPLETE.md  DATABASE_PERSISTENCE_SOLUTIONS.md  DATABASE_URL_EXPLAINED.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ISSUES_DIAGNOSIS.md  DEPLOYMENT_POSTGRESQL.md  DEPLOY_VERCEL_BACKEND_FRONTEND.md  DIAGNOSTICS_RESULTS.md  Dockerfile  ERROR_ANALYSIS_SUMMARY.md  FINAL_SETUP_STEPS.md  FIX_DATA_PERSISTENCE.md  FIX_DROPDOWN_MEMBRES.md  FIX_ERROR_404.md  FIX_TEAM_DATA_PERSISTENCE.md  FORMATIONS_TROUBLESHOOTING.md  FORMULAIRES_REDIMENSIONNES.md  GETTING_STARTED.md  GITHUB_BACKUP_IMPLEMENTATION.md  GITHUB_PUSH_COMPLETE.md  GIT_PUSH_SUMMARY.md  GUIDE_EQUIPE.md  GUIDE_RECONNEXION.md  IMMEDIATE_ACTION.md  IMPLEMENTATION_FRONTEND_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  (+48 more)
backend/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  FIX-PERMISSIONS-SUPABASE.sql  GITHUB_AUTO_BACKUP.md  GUIDE_CREATION_FORMATIONS.md  INSTALLER-FORMATIONS-COMPLET.sql  MIGRATION_VIA_API.md  POSTGRESQL_SETUP.md  UPDATE_FORMATIONS_CATEGORIES.sql  add-database-to-render.sh  check-get-team.js  check-migration-ready.js  check-schema.js  check-settings-schema.js  check-tables.js  check-team-schema.js  check-team.cjs  complete-migration.js  compress-images.cjs  convert-image.js  create-admin-foka.sql  data.json  (+51 more)
(+280 files in other folders)
