[package]
name = "tru_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json"] }
dotenvy = "0.15"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
argon2 = "0.5"
rand = "0.8"
thiserror = "2"
async-trait = "0.1"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "limit", "set-header", "trace"] }
tower = "0.5"
tower_governor = "0.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
